Bug 159443 - FILEOPEN XLSX Data table is not rendered below chart with data series in column
Summary: FILEOPEN XLSX Data table is not rendered below chart with data series in column
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2024-01-30 10:14 UTC by Gabor Kelemen (Collabora)
Modified: 2024-03-08 10:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2016 (13.06 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-01-30 10:14 UTC, Gabor Kelemen (Collabora)
Details
The example file in Excel 2016 and Calc master (113.00 KB, image/png)
2024-01-30 10:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-30 10:14:12 UTC
Created attachment 192249 [details]
Example file from Excel 2016

Attached example file contains a chart with data table and data series in columns.
When opened in Calc the data table is not shown.

1. Open attached file
-> no data table below the chart

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d49b0c3654e50ff9b74545140e6f19e008009c33
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Data table support was implemented first in 7.5, but this part seems to be missing.
Comment 1 Gabor Kelemen (Collabora) 2024-01-30 10:14:41 UTC
Created attachment 192250 [details]
The example file in Excel 2016 and Calc master
Comment 2 Commit Notification 2024-03-08 08:40:20 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f856733ed18353b8ac7d7e19348cf9b1107cc14b

tdf#159443 - chart view: fix Data table is not rendered below chart

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.