chart2/source/view/axes/VCartesianAxis.cxx
@@ -1687,6 +1687,13 @@ void VCartesianAxis::createDataTableShape(std::unique_ptr<TickFactory2D> const& 
             nDistance *= 2;
     }
 
+    if (nDistance <= 0)
+    {
+        // we only have one data series so we have no TickMarks, therefor calculate and use the table size
+        auto rDelta = aEnd - aStart;
+        nDistance = basegfx::fround(rDelta.getX());
+    }
+
     if (nDistance > 0)
     {
         m_pDataTableView->createShapes(aStart, aEnd, nDistance);
